# HPCC-Platform

./: CMakeLists.txt  docMacros.cmake
cmake_modules/: commonSetup.cmake
common/: CMakeLists.txt
common/commonext/: CMakeLists.txt
common/deftype/: CMakeLists.txt
common/dllserver/: CMakeLists.txt
common/environment/: CMakeLists.txt
common/fileview2/: CMakeLists.txt
common/monitoring/: CMakeLists.txt
common/monitoring/prosysinfo/: CMakeLists.txt
common/remote/: CMakeLists.txt
common/roxiecommlib/: CMakeLists.txt
common/roxiehelper/: CMakeLists.txt
common/roxiemanager/: CMakeLists.txt
common/thorhelper/: CMakeLists.txt
common/workunit/: CMakeLists.txt
common/wuwebview/: CMakeLists.txt
dali/: CMakeLists.txt
dali/base/: CMakeLists.txt
dali/dafilesrv/: dafilesrv.cmake  dafscontrol.cmake
dali/daliadmin/: CMakeLists.txt
dali/dalidiag/: CMakeLists.txt
dali/dalistop/: CMakeLists.txt
dali/datest/: CMakeLists.txt
dali/dfu/: dfuserver.cmake  dfuwu.cmake
dali/dfuXRefLib/: CMakeLists.txt
dali/dfuplus/: CMakeLists.txt
dali/dfuxref/: CMakeLists.txt
dali/ft/: dalift.cmake  ftslave.cmake
dali/hellodali/: CMakeLists.txt
dali/regress/: CMakeLists.txt
dali/sasha/: CMakeLists.txt
dali/server/: CMakeLists.txt  daserver.cpp
dali/treeview/: CMakeLists.txt
dali/updtdalienv/: CMakeLists.txt
deployment/configgen/: CMakeLists.txt
deployment/deploy/: CMakeLists.txt
deployment/deployutils/: CMakeLists.txt  deployutils.cpp  deployutils.hpp
deployment/envgen/: CMakeLists.txt
docs/: CMakeLists.txt  ECLReference.xml  IMDB.xml  description.xml.in
docs/BuildTools/: catalog.xml.in  fo.xsl  fo.xsl.in  relrem.xsl.in  xsltproc.cmake.in
docs/ECLLanguageReference/: CMakeLists.txt
docs/ECLProgrammersGuide/: CMakeLists.txt  PrGd-Includer.xml
docs/ECLR_mods/: CMakeLists.txt  ECLR-includer.xml
docs/ECLStandardLibraryReference/: CMakeLists.txt  SLR-includer.xml
docs/HPCCClientTools/: CMakeLists.txt
docs/HPCCClientTools/CT_Mods/: CT_Comm_Line_DFU.xml  CT_Comm_Line_ECL.xml  CT_Comm_Line_Roxie.xml  CT_ECL_CLI.xml  CT_ECL_IDE.xml  ECLCC.xml
docs/HPCCDataHandling/: CMakeLists.txt
docs/HPCCDataTutorial/: CMakeLists.txt
docs/IMDB/: CMakeLists.txt
docs/RDDERef/: CMakeLists.txt
docs/SLR-Mods/: CMakeLists.txt
docs/UsingConfigManager/: CMakeLists.txt  UsingConfigManager.xml
docs/common/: CMakeLists.txt
ecl/: CMakeLists.txt
ecl/agentexec/: CMakeLists.txt  agentexec.cmake
ecl/ecl-package/: CMakeLists.txt
ecl/eclagent/: CMakeLists.txt
ecl/eclcc/: CMakeLists.txt
ecl/eclccserver/: CMakeLists.txt
ecl/eclcmd/: CMakeLists.txt
ecl/eclplus/: CMakeLists.txt
ecl/eclscheduler/: CMakeLists.txt
ecl/hql/: CMakeLists.txt
ecl/hqlcpp/: CMakeLists.txt
ecl/hthor/: CMakeLists.txt
ecl/scheduleadmin/: CMakeLists.txt
ecl/schedulectrl/: CMakeLists.txt
ecllibrary/: CMakeLists.txt
esp/: CMakeLists.txt
esp/files/: CMakeLists.txt
esp/platform/: CMakeLists.txt
esp/scm/: espscm.cmake
esp/services/: CMakeLists.txt
esp/xslt/: CMakeLists.txt
hpcc/: CMakeLists.txt  hpcc.cpp
initfiles/: CMakeLists.txt
initfiles/sbin/: CMakeLists.txt
plugins/auditlib/: CMakeLists.txt
plugins/debugservices/: CMakeLists.txt
plugins/fileservices/: CMakeLists.txt
plugins/logging/: CMakeLists.txt
plugins/parselib/: CMakeLists.txt
plugins/stringlib/: CMakeLists.txt
plugins/unicodelib/: CMakeLists.txt
plugins/workunitservices/: CMakeLists.txt
roxie/ccd/: CMakeLists.txt
roxie/roxie/: CMakeLists.txt
roxie/roxieclient/: CMakeLists.txt
roxie/roxieclienttest/: CMakeLists.txt
roxie/roxiemem/: CMakeLists.txt
roxie/roxiepipe/: CMakeLists.txt
roxie/udplib/: udplib.cmake  udptransport.cmake
rtl/eclrtl/: CMakeLists.txt
rtl/ecltpl/: CMakeLists.txt
system/: CMakeLists.txt
tools/: CMakeLists.txt
(+94 files in other folders)
